--- a/main.css
+++ b/main.css
@@ -18,7 +18,6 @@ h1 {
 ul {
   text-align: center;
   width: 90%;
-  max-width: 120px;
   background-color: #fafafa;
   border-radius: 20px;
   padding: 20px;
@@ -30,7 +29,7 @@ ul {
 }
 
 li {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
   width: 100%;
@@ -41,4 +40,98 @@ li {
   width: 20px;
   height: 20px;
   margin-right: 15px;
+}
+
+/* Popup container */
+.popup {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  cursor: pointer;
+  background-color: #fafafa;
+  margin-bottom: 10px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+
+.removeBtn {
+  color: red;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  transform: translateY(-15px);
+  background-color: #fafafa;
+  padding-top: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.show {display:block;}
+
+.hide {
+  display: none;
+}
+
+.filterInput {
+  width: 100%;
+  border: none;
+  height: 30px;
+  margin-bottom: 35px;
+  border-radius: 5px;
+
 }
