--- a/main.css
+++ b/main.css
@@ -42,7 +42,6 @@ li {
   margin-right: 15px;
 }
 
-/* Popup container */
 .popup {
   position: relative;
   display: flex;
@@ -56,7 +55,6 @@ li {
   border-radius: 5px;
 }
 
-/* The actual popup (appears on top) */
 .popup .popuptext {
   visibility: hidden;
   background-color: #555;
@@ -71,7 +69,6 @@ li {
   margin-left: -80px;
 }
 
-/* Popup arrow */
 .popup .popuptext::after {
   content: "";
   position: absolute;
@@ -83,14 +80,12 @@ li {
   border-color: #555 transparent transparent transparent;
 }
 
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
 .popup .show {
   visibility: visible;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s
 }
 
-/* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
   from {opacity: 0;}
   to {opacity: 1;}
@@ -101,7 +96,7 @@ li {
   to {opacity:1 ;}
 }
 
-.removeBtn {
+.remove-btn {
   color: red;
 }
 .dropdown {
@@ -127,11 +122,10 @@ li {
   display: none;
 }
 
-.filterInput {
+.filter-input {
   width: 100%;
   border: none;
   height: 30px;
   margin-bottom: 35px;
   border-radius: 5px;
-
 }
